.different section fix color contrast

--- a/style/_different section.scss
+++ b/style/_different section.scss
@@ -36,7 +36,8 @@
             gap: 1rem;
 
             p {
-                color: $dark-grayish-violet;
+                // color: $dark-grayish-violet;
+                color: #59565D;
             }
         }
     }
@@ -76,7 +77,8 @@
                 }
 
                 p {
-                    color: $dark-grayish-violet;
+                    // color: $dark-grayish-violet;
+                    color: #59565D;
                 }
             }
         }
